--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,35 +64,139 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Total Players</th>\n",
+       "      <th>Purchase ID</th>\n",
+       "      <th>SN</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th>Price</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>576</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Lisim78</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>108</td>\n",
+       "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
+       "      <td>3.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Lisovynya38</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>143</td>\n",
+       "      <td>Frenzied Scimitar</td>\n",
+       "      <td>1.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ithergue48</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>92</td>\n",
+       "      <td>Final Critic</td>\n",
+       "      <td>4.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Chamassasya86</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Blindscythe</td>\n",
+       "      <td>3.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Iskosia90</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>131</td>\n",
+       "      <td>Fury</td>\n",
+       "      <td>1.44</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Total Players\n",
-       "0            576"
+       "   Purchase ID             SN  Age Gender  Item ID  \\\n",
+       "0            0        Lisim78   20   Male      108   \n",
+       "1            1    Lisovynya38   40   Male      143   \n",
+       "2            2     Ithergue48   24   Male       92   \n",
+       "3            3  Chamassasya86   24   Male      100   \n",
+       "4            4      Iskosia90   23   Male      131   \n",
+       "\n",
+       "                                   Item Name  Price  \n",
+       "0  Extraction, Quickblade Of Trembling Hands   3.53  \n",
+       "1                          Frenzied Scimitar   1.56  \n",
+       "2                               Final Critic   4.88  \n",
+       "3                                Blindscythe   3.27  \n",
+       "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "purchase_data.head(5)\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Purchasing Analysis (Total)"
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lisosia93       5\n",
+      "Idastidru52     4\n",
+      "Iral74          4\n",
+      "Zontibe81       3\n",
+      "Chanastnya43    3\n",
+      "               ..\n",
+      "Undotesta33     1\n",
+      "Hisridru55      1\n",
+      "Haerithp41      1\n",
+      "Siana77         1\n",
+      "Jiskjask60      1\n",
+      "Name: SN, Length: 576, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Purchasing Analysis (Total)\n",
+    "##Checking for missing data. No blank cells  all columns have the same number\n",
+    "##purchase_data.count\n",
+    "## Check for Na's\n",
+    "#df=purchase_data.isnull().values.any()\n",
+    "#print(df)\n",
+    "# Returned 'False'. No NAN in dataframe\n",
+    "##Count totatl number of players\n",
+    "df = purchase_data[\"SN\"].value_counts()\n",
+    "print(df)\n",
+    "\n"
    ]
   },
   {
@@ -113,61 +217,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Number of Unique Items</th>\n",
-       "      <th>Average Price</th>\n",
-       "      <th>Number of Purchases</th>\n",
-       "      <th>Total Revenue</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>179</td>\n",
-       "      <td>$3.05</td>\n",
-       "      <td>780</td>\n",
-       "      <td>$2,379.77</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Number of Unique Items Average Price Number of Purchases Total Revenue\n",
-       "0                     179         $3.05                 780     $2,379.77"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'counts'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-28-a0617fa2b239>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mnum_unique_items\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpurchase_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Item ID\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnum_unique_items\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcounts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'counts'"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "##number of unique items\n",
+    "\n",
+    "num_unique_items=purchase_data[\"Item ID\"].unique()\n",
+    "df=num_unique_items.counts()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1061,7 +1133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
